bonus/gitlab/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-dyn
  namespace: gitlab


spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      name: redis
      labels:
          app: redis
    spec:
      containers:
        - name: redis-cache
          image: redis:7-alpine
          command: ["redis-server", "--requirepass", "$(REDIS_PASSWORD)"]
          ports:
            - containerPort: 6379

---

apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: gitlab
spec:
  selector:
    app: redis
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
