bonus/gitlab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
  namespace: gitlab
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false" # Set to "true" if forcing HTTPS port 443
spec:
  rules:
    - host: gitlab.worklet.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab
                port:
                  number: 80
